--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "nss-final",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sawvivek.github.io/Update_Website",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,9 +13,7 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
-    "web-vitals": "^2.1.4",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
