--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "nss-final",
   "version": "0.1.0",
-  "homepage": "https://1032241187-sudo.github.io/website",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^11.0.3",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.2",
     "react-dom": "^18.2.0",
@@ -41,8 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.3.0"
   }
 }
